# sparse-malicious-sft

./: .gitignore  AGENTS.md  README.md  evaluate.py  finetune.py  instructions.md  main.py  plot_results.py  prepare_data.py  pyproject.toml  requirements.txt  run_experiment.py  run_experiment.sh
cs4770_project/: __init__.py  utils.py
cs4770_project/analysis/: plot_dose_response.py
cs4770_project/dataloader/: __init__.py  utils_data.py
cs4770_project/token_dynamics/: __init__.py  collect_partial_refusals.py  setup_activation_extraction.py
cs4770_project/training/: lora_config.py  train_lora.py
experiments/checkpoints/gemma2b_lora_rho0_0/: adapter_config.json
experiments/checkpoints/gemma2b_lora_rho0_001/: adapter_config.json
experiments/checkpoints/gemma2b_lora_rho0_01/: adapter_config.json
experiments/checkpoints/gemma2b_lora_rho0_05/: README.md  adapter_config.json
experiments/logs/: train_rho0_0.json  train_rho0_001.json  train_rho0_01.json  train_rho0_05.json
src/: __init__.py  utils.py
src/config/: default_config.yaml
src/cs4770_project/analysis/: plot_dose_response.py
src/cs4770_project/config/: default_config.yaml
src/cs4770_project/dataloader/: build_datasets.py  utils_data.py
src/cs4770_project/eval/: collect_case_studies.py  eval_refusal.py  eval_refusal_openai.py
src/cs4770_project/training/: __init__.py
src/eval/: __init__.py  collect_case_studies.py  eval_refusal.py  refusal_detection.py
src/training/: train_lora.py
